# aurasniff

./: .gitignore  LICENSE  README.md  aurasniff.py  generate_test_pcap.py  pcap_parser.py  pyproject.toml  terminal_ui.py  test_capture.pcap
.github/workflows/: publish.yml
src/aurasniff/: __main__.py  aurasniff.py  pcap_parser.py  terminal_ui.py
